--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,11 @@ jobs:
   run-terraform:
     name: 'Run terraform'
     runs-on: ubuntu-latest
+    
     steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
